# xiaoqiang

./: README.md
xiaoqiang/: CHANGELOG.rst  CMakeLists.txt  package.xml
xiaoqiang_bringup/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
xiaoqiang_bringup/launch/: xiaoqiang_camera.launch  xiaoqiang_core.launch  xiaoqiang_lidar.launch  xiaoqiang_model.launch  xiaoqiang_robot.launch
xiaoqiang_controller/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
xiaoqiang_controller/src/: controller.py
xiaoqiang_depth_image_proc/: CHANGELOG.rst  CMakeLists.txt  nodelet_plugins.xml  occupancy_xyz.yaml  package.xml
xiaoqiang_depth_image_proc/include/xiaoqiang_depth_image_proc/: depth_conversions.h  depth_traits.h
xiaoqiang_depth_image_proc/src/nodelets/: convert_metric.cpp  crop_foremost.cpp  disparity.cpp  occupancy_xyz.cpp  point_cloud_xyz.cpp  point_cloud_xyz_radial.cpp  point_cloud_xyzi.cpp  point_cloud_xyzi_radial.cpp  point_cloud_xyzrgb.cpp  register.cpp
xiaoqiang_description/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  urdf.rviz
xiaoqiang_description/launch/: display.launch  gazebo.launch  xiaoqiang_model.launch
xiaoqiang_description/robots/: xiaoqiang_urdf.URDF
xiaoqiang_driver/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
xiaoqiang_driver/include/xiaoqiang_driver/: AsyncSerial.h  DiffDriverController.h  StatusPublisher.h
xiaoqiang_driver/launch/: fake.launch  start.launch  xiaoqiang_fake.launch
xiaoqiang_driver/scripts/: fixudev
xiaoqiang_driver/src/: AsyncSerial.cpp  DiffDriverController.cpp  StatusPublisher.cpp  main.cpp
xiaoqiang_driver/src/xiaoqiang_driver/: fake_node.py
xiaoqiang_driver/udevs/: 95-persistent-serial.rules  95-xiaoqiang-serial.rules
xiaoqiang_freenect/: README.md
xiaoqiang_freenect/xiaoqiang_freenect/: CHANGELOG.rst  CMakeLists.txt  package.xml
xiaoqiang_freenect/xiaoqiang_freenect_camera/: .gitignore  CHANGELOG.rst  CMakeLists.txt  freenect_nodelets.xml  mainpage.dox  package.xml
xiaoqiang_freenect/xiaoqiang_freenect_camera/cfg/: Freenect.cfg
xiaoqiang_freenect/xiaoqiang_freenect_camera/include/freenect_camera/: image_buffer.hpp  tilt_driver.hpp
xiaoqiang_freenect/xiaoqiang_freenect_camera/include/xiaoqiang_freenect_camera/: freenect_device.hpp  freenect_driver.hpp  tilt_driver.hpp
xiaoqiang_freenect/xiaoqiang_freenect_camera/src/nodelets/: driver.cpp  driver.h
xiaoqiang_freenect/xiaoqiang_freenect_camera/src/nodes/: freenect_node.cpp
xiaoqiang_freenect/xiaoqiang_freenect_launch/: CHANGELOG.rst  CMakeLists.txt  package.xml
xiaoqiang_freenect/xiaoqiang_freenect_launch/launch/: freenect.launch  freenect2.launch  freenect_tf_prefix.launch  kinect-xyz.launch  kinect_frames.launch  kinect_frames2.launch
xiaoqiang_freenect/xiaoqiang_freenect_launch/launch/examples/: freenect-debug.launch  freenect-diagnostics.launch  freenect-ns.launch  freenect-registered-xyzrgb.launch  freenect-xyz.launch
xiaoqiang_freenect/xiaoqiang_freenect_launch/launch/includes/: depth.launch  depth2.launch.xml  depth_registered.launch  device.launch  device.launch.xml  disparity.launch  ir.launch  manager.launch  processing.launch  processing.launch.xml  processing2.launch.xml
xiaoqiang_freenect/xiaoqiang_freenect_stack/: CHANGELOG.rst  package.xml
xiaoqiang_monitor/: CHANGELOG.rst  CMakeLists.txt  README.md  monitor.py  package.xml
xiaoqiang_monitor/src/: monitor.py
xiaoqiang_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
xiaoqiang_msgs/msg/: Status.msg
xiaoqiang_navigation/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
xiaoqiang_navigation/addwa_local_planner/: CHANGELOG.rst  CMakeLists.txt  README.md  blp_plugin.xml  package.xml
xiaoqiang_navigation/addwa_local_planner/cfg/: ADDWAPlanner.cfg
xiaoqiang_navigation/launch/: fake_move_base.launch  fake_move_base_blank_map.launch
xiaoqiang_navigation/src/: square.py
xiaoqiang_navigation/xiaoqiang_navigation/: CHANGELOG.rst  CMakeLists.txt  package.xml
xiaoqiang_navigation/xiaoqiang_navigation_example/: CHANGELOG.rst  CMakeLists.txt  package.xml
xiaoqiang_navigation/xiaoqiang_navigation_example/launch/: fake_move_base.launch  fake_move_base_blank_map.launch
xiaoqiang_navigation/xiaoqiang_navigation_example/rviz/: nav_kinect.rviz
xiaoqiang_navigation/xiaoqiang_navigation_example/src/: barDetectChanger.py
xiaoqiang_server/: CHANGELOG.rst  CMakeLists.txt  appServ.py  package.xml
xiaoqiang_server/src/: server.py
