<?xml version="1.0"?>
<package format="2">
  <name>xiaoqiang_bringup</name>
  <version>0.0.12</version>
  <description>xiaoqiang bringup package, including launch files for many devices</description>
  <license>MIT</license>

  <maintainer email="randoms@bwbot.org">Randoms</maintainer>
  <url type="bugtracker">https://github.com/bluewhalerobot/xiaoqiang/issues</url>
  <url type="repository">https://github.com/bluewhalerobot/xiaoqiang</url>
  <url type="website">http://www.bwbot.org/content/xiaoqiang</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>robot_upstart</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>message_runtime</depend>
  <depend>xiaoqiang_driver</depend>
  <depend>xiaoqiang_monitor</depend>
  <depend>xiaoqiang_description</depend>
  <depend>usb_cam</depend>
  <depend>rplidar_ros</depend>
  <depend>web_video_server</depend>

</package>
