<?xml version="1.0"?>
<package format="2">
  <name>xiaoqiang_driver</name>
  <version>0.0.7</version>
  <description>The xiaoqiang driver package</description>
  <license>MIT</license>

  <maintainer email="xiefs@foxmail.com">Xie fusheng</maintainer>
  <maintainer email="randoms@bwbot.org">Randoms</maintainer>
  <url type="bugtracker">https://github.com/bluewhalerobot/xiaoqiang/issues</url>
  <url type="repository">https://github.com/bluewhalerobot/xiaoqiang</url>
  <url type="website">http://www.bwbot.org/content/xiaoqiang</url>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>setserial</depend>

</package>
