<?xml version="1.0"?>
<package format="2">
  <name>xiaoqiang_monitor</name>
  <version>0.0.1</version>
  <description>The xiaoqiang_monitor package</description>
  <license>MIT</license>

  <maintainer email="randoms@bwbot.org">Randoms</maintainer>
  <url type="bugtracker">https://github.com/bluewhalerobot/xiaoqiang/issues</url>
  <url type="repository">https://github.com/bluewhalerobot/xiaoqiang</url>
  <url type="website">http://www.bwbot.org/content/xiaoqiang</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>

</package>
