<package>

  <name>xiaoqiang_freenect</name>
  <version>0.0.9</version>
  <description>
    A libfreenect-based ROS driver for the Microsoft Kinect
    Modified version of xiaoqiang_freenect_stack, add tilt angle control support
  </description>

  <maintainer email="randoms@bwbot.org">Randoms</maintainer>
  <maintainer email="xiefs@foxmail.com">Xie fusheng</maintainer>
  <author>Piyush Khandelwal</author>
  <license>BSD</license>  

  <url type="website">http://ros.org/wiki/xiaoqiang_freenect_stack</url>
  <url type="repository">https://github.com/bluewhalerobot/xiaoqiang.git</url>
  <url type="bugtracker">https://github.com/bluewhalerobot/xiaoqiang/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>xiaoqiang_freenect_camera</run_depend>
  <run_depend>xiaoqiang_freenect_launch</run_depend>

</package>
