<package>
  <name>xiaoqiang_freenect_camera</name>
  <version>0.0.11</version>
  <description>
    A libfreenect-based ROS driver for the Microsoft Kinect.  This is
    a port of the OpenNI driver that uses libfreenect instead, because
    on some systems with some devices it works better.
    Modified version of xiaoqiang_freenect_stack, add tilt angle control support
  </description>

  <maintainer email="randoms@bwbot.org">Randoms</maintainer>
  <maintainer email="xiefs@foxmail.com">Xie fusheng</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/xiaoqiang_freenect_camera</url>
  <url type="repository">https://github.com/bluewhalerobot/xiaoqiang.git</url>
  <url type="bugtracker">https://github.com/bluewhalerobot/xiaoqiang/issues</url>

  <author>Patrick Mihelich</author>
  <author>Suat Gedikli</author>
  <author>Radu Bogdan Rusu (original openni_camera driver).</author>
  <author>Piyush Khandelwal (libfreenect port).</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>camera_info_manager</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>libfreenect</build_depend>
  <build_depend>log4cxx</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pluginlib</build_depend>

  <run_depend>camera_info_manager</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>libfreenect</run_depend>
  <run_depend>log4cxx</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pluginlib</run_depend>

  <export>
    <nodelet plugin="${prefix}/freenect_nodelets.xml"/>
  </export>
</package>
