<package>

  <name>xiaoqiang_freenect_launch</name>
  <version>0.0.9</version>
  <description>
    Launch files for xiaoqiang_freenect_camera to produce rectified, registered
    or disparity images.  Also produce point clouds and registered
    point clouds.  Based on the openni_launch package.
    Modified version of xiaoqiang_freenect_stack, add tilt angle control support
  </description>

  <maintainer email="randoms@bwbot.org">Randoms</maintainer>
  <maintainer email="xiefs@foxmail.com">Xie fusheng</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/xiaoqiang_freenect_launch</url>
  <url type="repository">https://github.com/bluewhalerobot/xiaoqiang.git</url>
  <url type="bugtracker">https://github.com/bluewhalerobot/xiaoqiang/issues</url>

  <author>Patrick Mihelich (original openni_launch package)</author>
  <author email="piyushk@gmail.com">Piyush Khandelwal (libfreenect port)</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>xiaoqiang_freenect_camera</run_depend>
  <run_depend>image_proc</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>rgbd_launch</run_depend>
  <run_depend>tf</run_depend>

</package>
