<?xml version="1.0"?>
<package format="2">
  <name>xiaoqiang_navigation_example</name>
  <version>0.0.12</version>
  <description>xiaoqiang navigation stack examples</description>
  <license>MIT</license>

  <maintainer email="randoms@bwbot.org">Randoms</maintainer>
  <url type="bugtracker">https://github.com/bluewhalerobot/xiaoqiang_navigation/issues</url>
  <url type="repository">https://github.com/bluewhalerobot/xiaoqiang_navigation</url>
  <url type="website">http://www.bwbot.org/content/xiaoqiang</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>xiaoqiang_msgs</depend>
  <depend>xiaoqiang_freenect</depend>

</package>